# DesktopLLM

./: .gitignore  README.md  explore_gpt2.ipynb  hello.py  pyproject.toml
model/: main.py  model.py  train.py  utils.py
