[project]
name = "desktopllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "ruff>=0.11.2",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.50.3",
]
